[package]
name = "gephgui-wry"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# [features]
# ayatana = ["tao/ayatana"]


[features]
# tray=["tao/tray", "wry/tray"]

[dependencies]
tracing = "0.1.35"
tracing-subscriber = "0.2.25"
smolscale = "0.3.49"
anyhow = "1.0.66"
mime-sniffer = "0.1.2"
tap = "1.0.1"
mime_guess = "2.0.3"

serde_json = "1.0.68"
serde = { version = "1.0.147", features = ["derive"] }
once_cell = "1.15.0"
parking_lot = "0.11.2"
slab = "0.4.5"
which = "4.2.2"
runas= "0.2.1"
smol = "2"
dirs = "4.0.0"
tempfile = "3.2.0"
png = "0.17.2"
# native-dialog = "0.5.5"

ureq = "2.3.0"
flume = "0.10.14"
webbrowser = "0.5.5"

isahc = "1.7.2"
serde_yaml = "0.9.14"
semver = "1.0.14"
smol-timeout = "0.6.0"
rand = "0.8.5"
native-dialog = "0.5"
open = "4.1.0"
nanorpc = "0.1.12"
bincode = "1.3.3"
tao = "0.31.1"
rfd = {version="0.15.2", default-features=false, features=["xdg-portal", "tokio"]}
async-trait = "0.1.86"
thiserror = "2.0.11"
infer = "0.19.0"

[target.'cfg(windows)'.dependencies]
is_elevated= "0.1.2"

[target.'cfg(windows)'.build-dependencies]
winres = "0.1.12"

[build-dependencies]
embed-resource = "2.1.1"

[dependencies.wry]
version = "0.48"


# [dependencies.surf]
# version="2.3.1"
# default-features=false
# features=["h1-client-rustls"] 

[dependencies.rust-embed]
version = "6.2.0"
features = ["debug-embed"]

[dependencies.tide]
version = "0.16.0"
default-features = false
features = ["h1-server"]

[profile.release]
panic = "abort"
opt-level='z'
# debug=0
lto=true
strip=true
codegen-units = 1

[profile.dev]
panic = "abort"

