[package]
name = "gephgui-wry"
version = "5.3.1"
edition = "2024"
description = "wry-based GUI for Geph"
repository = "https://github.com/geph-official/gephgui-wry"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# [patch.crates-io]
# geph5-client={path="../geph5/binaries/geph5-client"}
# geph5-broker-protocol={path="../geph5/libraries/geph5-broker-protocol"}

[features]
# tray=["tao/tray", "wry/tray"]

[dependencies]
tracing = "0.1.41"
tracing-subscriber = {version="0.3.20", features=["json"]}
smolscale = "0.4"
anyhow = "1.0.100"
mime-sniffer = "0.1.3"
tap = "1.0.1"
mime_guess = "2.0.5"
reqwest = { version = "0.12.24", default-features = false, features = ["rustls-tls-webpki-roots"] }
serde_json = "1.0.145"
serde = { version = "1.0.228", features = ["derive"] }
once_cell = "1.21.3"
parking_lot = "0.11.2"
slab = "0.4.11"
which = "4.4.2"
runas= "0.2.1"
smol = "2"
dirs = "4.0.0"
tempfile = "3.23.0"
png = "0.17.16"
# native-dialog = "0.5.5"

ureq = "2.12.1"
flume = "0.10.14"
webbrowser = "0.5.5"

oneshot = "0.1"

isahc = "1.7.2"
serde_yaml = "0.9.34"
semver = "1.0.27"
smol-timeout2 = "0.6.1"
rand = "0.8.5"
native-dialog = "0.5"
open = "4.2.0"
nanorpc = "0.1.13"
bincode = "1.3.3"
tao = "0.31.1"
rfd = {version="=0.15.0", default-features=false, features=["xdg-portal", "async-std"]}
async-trait = "0.1.89"
thiserror = "2.0.17"
infer = "0.19.0"
geph5-client = {version="0.2.86", features=["windivert", "aws_lambda"]}
base32 = "0.5.1" 
geph5-broker-protocol = "0.2.85"
futures-util = {version="0.3.31", features=["io"]}
isocountry = "0.3.2"
hmac-sha256 = "1.1.12"
hex = "0.4.3"
minisign-verify = "0.2.4"
sys-locale = "0.3.2"
tiny_http = "0.12.0"
geph5-misc-rpc = "0.2.85"

[target.'cfg(windows)'.dependencies]
is_elevated= "0.1.2"

[target.'cfg(windows)'.build-dependencies]
winres = "0.1.12"

[target.'cfg(target_os = "macos")'.dependencies]
muda = "0.17.1"

[build-dependencies]
embed-resource = "2.5.2"

[dependencies.wry]
version = "0.50"


# [dependencies.surf]
# version="2.3.1"
# default-features=false
# features=["h1-client-rustls"] 

[dependencies.rust-embed]
version = "6.8.1"
features = ["debug-embed"]

# This attempts to prevent Defender from yelling at us
[profile.release]
panic = "abort"
opt-level=3
#lto=false
strip=true
codegen-units = 1


[profile.dev]
panic = "abort"
opt-level = 1
